examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/const_tail.st
language core;

extend with #lists;


fn main(n : Nat) -> [Nat] {
  return  cons(0, [true]);
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
